--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,16 @@
         }
     ],
     "require": {
+        "php": "^7.1",
         "guzzlehttp/guzzle": "^6.2",
         "openzipkin/zipkin": "^1.3"
     },
     "autoload": {
         "psr-4": {
-            "LaravelCloud\\LarTrace\\": "src/"
+            "LaravelCloud\\Trace\\": "src/"
         },
         "files": [
-            "src/functions/utility.php"
+            "functions/utility.php"
         ]
     },
     "minimum-stability": "stable"
