--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravelcloud/lar-trace",
+    "name": "LaravelCloud/lar-trace",
     "type": "library",
     "description": "lar-trace为laravel服务之间调用提供链路追踪",
     "authors": [
@@ -9,17 +9,33 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.0",
+        "illuminate/support": "5.0.*|5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*",
         "guzzlehttp/guzzle": "^6.2",
         "openzipkin/zipkin": "^1.3"
     },
+    "require-dev": {
+        "phpunit/phpunit": "7.3.*",
+        "laravel/framework": "5.7.*",
+        "friendsofphp/php-cs-fixer": "2.7.*"
+    },
+
     "autoload": {
         "psr-4": {
             "LaravelCloud\\Trace\\": "src/"
-        },
-        "files": [
-            "functions/utility.php"
-        ]
+        }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "scripts": {
+        "tests": ["vendor/bin/phpunit --verbose"],
+        "tests-travis": [
+            "vendor/bin/phpunit --verbose --configuration phpunit.xml --coverage-clover test/clover.xml"
+        ],
+        "tests-report": [
+            "vendor/bin/phpunit --verbose --configuration phpunit.xml --coverage-html test/html-report"
+        ],
+        "phpcs": [
+            "vendor/bin/php-cs-fixer fix --config=.php_cs --verbose --diff --dry-run"
+        ]
+    }
 }
