--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,6 @@ Homestead.json
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
 
-.idea
+.idea/*
 .php_cs.cache
 composer.lock
