--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require-dev": {
         "phpunit/phpunit": "7.3.*",
         "laravel/framework": "5.7.*",
-        "friendsofphp/php-cs-fixer": "2.7.*"
+        "friendsofphp/php-cs-fixer": "2.7.*",
+        "orchestra/testbench": "~3.0"
     },
 
     "autoload": {
