--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,5 @@ php:
 before_script:
   - composer install --dev
   - composer phpcs
-  - composer dump-autoload
-  - composer tests-travis
-  - composer tests-report
+
+script: vendor/bin/phpunit --verbose
