--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     "scripts": {
         "tests": ["vendor/bin/phpunit --verbose"],
         "tests-travis": [
-            "vendor/bin/phpunit --verbose --configuration phpunit.xml --coverage-clover test/clover.xml"
+            "vendor/bin/phpunit --verbose --configuration phpunit.xml --coverage-clover tests/clover.xml"
         ],
         "tests-report": [
             "vendor/bin/phpunit --verbose --configuration phpunit.xml --coverage-html test/html-report"
