--- a/composer.json
+++ b/composer.json
@@ -43,5 +43,18 @@
         "phpcs": [
             "vendor/bin/php-cs-fixer fix --config=.php_cs --verbose --diff --dry-run"
         ]
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        },
+        "laravel": {
+            "providers": [
+                "LaravelCloud\\Trace\\TraceLaravel\\TracingServiceProvider"
+            ],
+            "aliases": {
+                "Tracing": "LaravelCloud\\Trace\\TraceLaravel\\TracingFacade"
+            }
+        }
     }
 }
