--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravelcloud/lar-trace",
+    "name": "LaravelCloud/lar-trace",
     "type": "library",
     "description": "lar-trace为laravel服务之间调用提供链路追踪",
     "authors": [
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "php": "^7.0",
+        "php": "^7.1",
+        "ext-json": "*",
         "illuminate/support": "5.0.*|5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*",
         "guzzlehttp/guzzle": "^6.2",
         "openzipkin/zipkin": "^1.3"
@@ -43,18 +44,5 @@
         "phpcs": [
             "vendor/bin/php-cs-fixer fix --config=.php_cs --verbose --diff --dry-run"
         ]
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0.x-dev"
-        },
-        "laravel": {
-            "providers": [
-                "LaravelCloud\\Trace\\TraceLaravel\\TracingServiceProvider"
-            ],
-            "aliases": {
-                "Tracing": "LaravelCloud\\Trace\\TraceLaravel\\TracingFacade"
-            }
-        }
     }
 }
