去掉多余的代码

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "LaravelCloud/lar-trace",
+    "name": "laravelcloud/lar-trace",
     "type": "library",
     "description": "lar-trace为laravel服务之间调用提供链路追踪",
     "authors": [
@@ -52,10 +52,7 @@
         "laravel": {
             "providers": [
                 "LaravelCloud\\Trace\\TraceLaravel\\TracingServiceProvider"
-            ],
-            "aliases": {
-                "Tracing": "LaravelCloud\\Trace\\TraceLaravel\\TracingFacade"
-            }
+            ]
         }
     }
 }
