--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "php": "^7.0",
+        "php": "^7.1",
+        "ext-json": "*",
         "illuminate/support": "5.0.*|5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*",
         "guzzlehttp/guzzle": "^6.2",
         "openzipkin/zipkin": "^1.3"
@@ -51,10 +52,7 @@
         "laravel": {
             "providers": [
                 "LaravelCloud\\Trace\\TraceLaravel\\TracingServiceProvider"
-            ],
-            "aliases": {
-                "Tracing": "LaravelCloud\\Trace\\TraceLaravel\\TracingFacade"
-            }
+            ]
         }
     }
 }
